Version 2.2.8

 User-visible changes:
  * Do not replace dashes with underscores in IDs (closes issue #44)
  * Sevenload:
    # Fix http/401 error
    # Cleanup title parsing (use config data instead)
  * Croak with an error if BerkeleyDB module is not found
    # And either -d or -g options are used


Version 2.2.7
(September 29, 2009)

 User-visible changes:
  * Fix: dailymotion id parsing
  * Youtube:
    # Accept -f fmt34
    # fmt34 is now treated as yet another (new?) format
    # Rewrite youtube section of the FORMATS in the manual
  * Fix: --format=best not working with youtube (closes issue #39)
    # Thanks to Peter Baranyi for the fix

 Developer-visible changes:
  * Disable: t/11redtube.t (broken, see known issues)
  * "make test": ADULT_OK env.var. now enables redtube test

 Known issues:
  * redtube: broken (verify -> http/404)
 

Version 2.2.6
(September 14, 2009)

 User-visible changes:
  * Fix: liveleak: "error: Unsupported protocol (http/1)" (closes #36)
  * Fix: vimeo: title parsing (Thanks to Peter Baranyi for the fix, closes #37)
    - Fixes title issues with accented chars
  * Fix: break: http/403 (Thanks to Werner Elsler for the fix, closes #38)

 Developer-visible changes:
  * t/11redtube.t: fix dead link


Version 2.2.5
(August 14, 2009)

 User-visible changes:
  * Add: --print-fname option
  * Fix: dailymotion ID parsing
  * Fix: --hosts: dailymotion: spak-mini -> spark-mini
  * Zeropad ETA

 Developer-visible changes:
  * Correct copyright years and notices in source code
  * tlinks/youtube-utf8.url: fix dead link


Version 2.2.4
(August 2, 2009)

 User-visible changes:
  * Add:
    # --stream-pass option (port from cclive)
    # funnyhub support
      * Port from cclive
    # myubo support
      * Port from cclive
    # clipfish support
      * Thanks to Patrick Hoffmann <patrick@sobran.de> for data mining
  * Fix:
    # Misc. typos in manual
    # Redtube support (videoid/title parsing issues)
    # Dailymotion: spak-mini -> spark-mini