@@ -20,7 +20,6 @@ lib/clive/Host/Golem.pm
 lib/clive/Host/Google.pm
 lib/clive/Host/Liveleak.pm
 lib/clive/Host/Myubo.pm
-lib/clive/Host/Redtube.pm
 lib/clive/Host/Sevenload.pm
 lib/clive/Host/Spiegel.pm
 lib/clive/Host/Vimeo.pm
@@ -44,7 +43,6 @@ t/07cctv.t
 t/08evisor.t
 t/09google.t
 t/10sevenload.t
-t/11redtube.t
 t/12vimeo.t
 t/13error.t
 t/14spiegel.t
