@@ -572,8 +572,6 @@ For further reading:
 
 =item B<break.com>
 
-=item B<redtube.com>
-
 =item B<ehrensenf.de>
 
 =item B<clipfish.de>
